fix menu on mobile

--- a/src/components/header/Menu/menu.module.scss
+++ b/src/components/header/Menu/menu.module.scss
@@ -3,5 +3,5 @@
 .shoppingBag {
   @extend .nav-item;
   @extend .nav-link;
-  cursor: pointer;
+  @extend .btn;
 }
